--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>resources -New -Year -New -Mission</title>
+
+    <link rel="stylesheet" href="styles/new year.css">
 </head>
 <body>
     <header>
-        <h3> New Year</h3>
-        <p>Hello wold</p>
+        <div class="backgraound-img">
+            
+            <div class="title">
+            <p class="New">Happy New Year</p>
+            <h1 class="text">New Year Party<br>Celebration</h1>
+            </div>
+        </div>
+    <div class="container">
+        <h1 class="f">65% OFF</h1>
+        <h5 id="g">OUR HOLIDAY DEALS ARE BETTER</h5>
+        <h3 class="e">ALL CATEGORIES</h3>
+        <img class="pic" src="resources/New Year Photo.png" alt="">
+    
+
+    </div>
 
     </header>
     <main>
