--- a/index.html
+++ b/index.html
@@ -18,14 +18,34 @@
         </div>
     <div class="container">
         <h1 class="f">65% OFF</h1>
-        <h5 id="g">OUR HOLIDAY DEALS ARE BETTER</h5>
+        <h5 id="short">OUR HOLIDAY DEALS ARE BETTER</h5>
         <h3 class="e">ALL CATEGORIES</h3>
-        <img class="pic" src="resources/New Year Photo.png" alt="">
+        <img class="pic" src="/resources/New Year Photo.png" alt="">
     
-
-    </div>
+  </div>
+   
+</div>
 
     </header>
+    <section>
+        <div class="back">
+            <div class="text-container">
+                <h1 class="m">Welcome to <br> midnight party</h1>
+                <p class="V">I can enjoy my day,I am very Happy,I went to midnight party for the first time <br>.I danced a lot when i come to the Party</p>
+                <button style="background-color: black;color: white;border: none;font: size 20px;margin-top:5px;">JOIN NOW</button>
+
+            </div>
+            <div class="img">
+                <img src="./resources/Group 70.png" alt="">
+
+            </div>
+
+        </div>
+        <div>
+            <img src="./resources/Vectorrr.png" alt="">
+
+        </div>
+    </section>
     <main>
 
     </main>
