--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>resources -New -Year -New -Mission</title>
+    <style>
+        .containar{
+    width: 400;
+    height: 100%;
+    font-size: 32px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    
+}
+    </style>
 
     <link rel="stylesheet" href="styles/new year.css">
 </head>
