added new year photo.png

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </header>
     <section>
-        <div class="banner2">
+        <!-- <div class="banner2">
 
         </div>
         <div class="back">
@@ -72,7 +72,7 @@
                 <div>
                     <img class="R" src="./resources/Group 96.png" alt="">
                 </div>
-                
+                 -->
 
             
 
